# Text-Editor

./: .gitignore  CMakeLists.txt  README.md
src/: Buffer.c  Buffer.h  Lines.c  Lines.h  String.c  String.h  main.c
src/.cache/clangd/index/: Buffer.c.22E17B61E69336CF.idx  Buffer.h.7357D34DBB11B991.idx  main.c.53D8E31001DB36CE.idx
